--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -10,7 +10,7 @@
             <ion-card *ngFor="let report of reports" mode="ios">
                 <ion-card-header>
                     <ion-card-title
-                        >{{ report.monthlyReports.month }}
+                        >{{ report.monthlyReports.month }} - {{ report.monthlyReports.year }}
                     </ion-card-title>
                 </ion-card-header>
 
